--- a/hello.html
+++ b/hello.html
@@ -3,8 +3,15 @@
 <head>
 	<title>clouds in the sky</title>
 </head>
-git add
+
 <body>
+	<h1>CAnDY CloUd</h1>
+
+<p>If the clouds were candy clouds?</p>
+<h2>good or weird</h2>
+<img src="cloud-html.jpg" width="500px"><a href="https://en.wikipedia.org/wiki/Cloud"><p>press HERE to read about clouds</p></a>
+<h3>OR?</h3>
+<img src="candy-cloud.jpg" >
 
 </body>
 </html>
